# pyxel-playground

./: .gitignore  AGENTS.md  LICENSE  README.md  hello_world.html  index.html  pyproject.toml
.agent/rules/: agents.md
docs/: index.html  styles.css
docs/pages/breakout/: index.html
docs/pages/circle_shooting/: circle_shooting.pyxapp  index.html
docs/pages/collision_demo/: index.html
docs/pages/hello_world/: index.html
docs/pages/img_collider/: index.html
docs/pages/shape_demo/: index.html  shape_demo.pyxapp
pages/hello_world/: hello_world.pyxapp
pages/shape_demo/: shape_demo.pyxapp
pages/vector2_circle/: index.html
sources/breakout/: breakout.py
sources/collision_demo/: collision_demo.py
sources/hello_world/: hello_world.py
sources/img_collider/: img_collider.py
sources/img_collider/assets/: sample.pyxres
sources/shape_demo/: shape_demo.py
sources/utils/: geometry.py  polygon.py  shape.py  vector2.py
