[project]
name = "pyxel-playground"
version = "0.1.0"
description = "pyxelでレトロ風ゲームを作ってみたいリポジトリ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.5.10",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.46.3",
]
